update the page markup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
-<plone-global-navigation></plone-global-navigation>
-<plone-breadcrumbs></plone-breadcrumbs>
-<traverser-outlet></traverser-outlet>
+<header>
+  <div class="container">
+    <div class="row">
+      <app-global-navigation></app-global-navigation>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <plone-breadcrumbs></plone-breadcrumbs>
+    </div>
+  </div>
+</header>
+<main>
+  <div class="container">
+    <div class="row">
+      <traverser-outlet></traverser-outlet>
+    </div>
+  </div>
+</main>
