--- a/src/app/global-navigation/global-navigation.component.scss
+++ b/src/app/global-navigation/global-navigation.component.scss
@@ -60,10 +60,10 @@
       border-right:0;
       border-left:0;	
       & > a:hover {
-        border-color: #eee #eee #50c0e9;
-        color: #50c0e9;
+        border-color: #eee #eee $blue;
+        color: $blue;
         border-radius:0;
-        background-color:#f9f9f9;
+        background-color: $lightgrey;
       }
     }
     &.active {
