--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,3 +17,10 @@
     </div>
   </div>
 </main>
+<footer>
+  <div class="container">
+    <div class="row">
+      <app-footer></app-footer>
+    </div>
+  </div>
+</footer>
